--- a/recruit-gui/src/app/accounts/accounts.component.html
+++ b/recruit-gui/src/app/accounts/accounts.component.html
@@ -4,19 +4,19 @@
 	<div class="nav-tabs-bar">
 		<ul class="nav nav-tabs">
 		  <li class="nav-item">
-		    <span class="nav-link tabNav" (click)="switchTab('recruiters')">Recruiters</span>
+		    <span class="nav-link tabNav" (click)="switchTab('recruiters')">{{'arenella-accounts-menu-recruiters' | translate}}</span>
 		  </li>
 		  <li class="nav-item tabNav">
-		    <span class="nav-link" (click)="switchTab('candidates')">Candidates</span>
+		    <span class="nav-link" (click)="switchTab('candidates')">{{'arenella-accounts-menu-candidates' | translate}}</span>
 		  </li>
 		  <li class="nav-item tabNav">
-		    <span class="nav-link" (click)="switchTab('availabilityChecks')">Availability</span>
+		    <span class="nav-link" (click)="switchTab('availabilityChecks')">{{'arenella-accounts-menu-availability' | translate}}</span>
 		  </li>
 		<li class="nav-item tabNav">
-		    <span class="nav-link" (click)="switchTab('skillValidation')">Skills</span>
+		    <span class="nav-link" (click)="switchTab('skillValidation')">{{'arenella-accounts-menu-skills' | translate}}</span>
 		  </li>
 		   <li class="nav-item tabNav">
-		    <span class="nav-link" (click)="switchTab('subscriptionActions')">Subscription</span>
+		    <span class="nav-link" (click)="switchTab('subscriptionActions')">{{'arenella-accounts-menu-subscription' | translate}}</span>
 		  </li>
 		</ul>
 	</div>
@@ -27,39 +27,39 @@
 			<table>
 				<thead>
 					<tr>
-						<th>Subscription Type</th>
-						<th>Count</th>
+						<th>{{'arenella-accounts-tabrecruiters-subscription-type' | translate}}</th>
+						<th>{{'arenella-accounts-tabrecruiters-count' | translate}}</th>
 						<th></th>
 					</tr>
 				</thead>
 				<tbody>
 					<tr>
-						<td class="recruiter-active-subscription">Active Paid Subscription</td>
+						<td class="recruiter-active-subscription">{{'arenella-accounts-tabrecruiters-paid-subscriptions' | translate}}</td>
 						<td class="recruiter-active-subscription">{{activePaidSubscription.length}}</td>
-						<td><button class="btn btn-secondary" (click)="toggleShowActivePaidSubscription()">Toggle</button></td>
+						<td><button class="btn btn-secondary" (click)="toggleShowActivePaidSubscription()">{{'arenella-accounts-tabrecruiters-toggle' | translate}}</button></td>
 					</tr>
 					<tr>
-						<td class="recruiter-credit-based-subscription">Credit Based</td>
+						<td class="recruiter-credit-based-subscription">{{'arenella-accounts-tabrecruiters-credit-based' | translate}}</td>
 						<td class="recruiter-credit-based-subscription">{{creditBasedSubscription.length}}</td>
-						<td><button class="btn btn-secondary" (click)="toggleShowCreditBasedSubscription()">Toggle</button></td>
+						<td><button class="btn btn-secondary" (click)="toggleShowCreditBasedSubscription()">{{'arenella-accounts-tabrecruiters-toggle' | translate}}</button></td>
 					</tr>
 					<tr>
-						<td class="recruiter-trial-subscription">Trial Subscription</td>
+						<td class="recruiter-trial-subscription">{{'arenella-accounts-tabrecruiters-trial-subscriptions' | translate}}</td>
 						<td class="recruiter-trial-subscription">{{trialPeriodRecruiters.length}}</td>
-						<td><button class="btn btn-secondary" (click)="toggleShowTrialPeriodRecruiters()">Toggle</button></td>
+						<td><button class="btn btn-secondary" (click)="toggleShowTrialPeriodRecruiters()">{{'arenella-accounts-tabrecruiters-toggle' | translate}}</button></td>
 					</tr>
 					<tr>
-						<td class="recruiter-expired-subscription">Expired Subscription</td>
+						<td class="recruiter-expired-subscription">{{'arenella-accounts-tabrecruiters-expired-subscriptions' | translate}}</td>
 						<td class="recruiter-expired-subscription">{{expiredSubscriptionRecruiters.length}}</td>
-						<td><button class="btn btn-secondary" (click)="toggleShowExpiredSubscriptionRecruiters()">Toggle</button></td>
+						<td><button class="btn btn-secondary" (click)="toggleShowExpiredSubscriptionRecruiters()">{{'arenella-accounts-tabrecruiters-toggle' | translate}}</button></td>
 					</tr>
 					<tr>
-						<td class="recruiter-firstgen">FirstGen Subscription</td>
+						<td class="recruiter-firstgen">{{'arenella-accounts-tabrecruiters-firstgen-subscriptions' | translate}}</td>
 						<td class="recruiter-firstgen">{{firstGenActiveSubscription.length}}</td>
-						<td><button class="btn btn-secondary" (click)="toggleShowFirstGenActiveSubscription()">Toggle</button></td>
+						<td><button class="btn btn-secondary" (click)="toggleShowFirstGenActiveSubscription()">{{'arenella-accounts-tabrecruiters-toggle' | translate}}</button></td>
 					</tr>
 					<tr>
-						<td>Total  / Total active</td>
+						<td>{{'arenella-accounts-tabrecruiters-subscriptions-totals' | translate}}</td>
 						<td>{{recruiters.length}} / <span>{{getTotalActiveRecruiters()}}</span></td>
 					</tr>
 				</tbody>
@@ -70,11 +70,11 @@
 					<thead>
 		      			<tr>
 		      				<!-- Table Headers -->
-		      				<th class="bg-tab-hdr">Id</th>
-		      				<th class="bg-tab-hdr">Name</th>
-		            	    <th class="bg-tab-hdr">Email</th>
-		                	<th class="bg-tab-hdr">Company</th>
-		                	<th class="bt-tab-hdr">Active</th>
+		      				<th class="bg-tab-hdr">{{'arenella-accounts-tabcandidates-id' | translate}}</th>
+		      				<th class="bg-tab-hdr">{{'arenella-accounts-tabcandidates-name' | translate}}</th>
+		            	    <th class="bg-tab-hdr">{{'arenella-accounts-tabcandidates-email' | translate}}</th>
+		                	<th class="bg-tab-hdr">{{'arenella-accounts-tabcandidates-company' | translate}}</th>
+		                	<th class="bt-tab-hdr">{{'arenella-accounts-tabcandidates-active' | translate}}</th>
 		      			</tr>
 		      	</thead>
 		      	<tbody>
@@ -126,11 +126,11 @@
 			<table class="table candidate-table availability">
 				<thead>
 		      		<tr>
-		      			<th class="bg-tab-hdr">Id</th>
-		      			<th class="bg-tab-hdr">Name</th>
-		      			<th class="bg-tab-hdr">Pos</th>
-		      			<th class="bg-tab-hdr">Role</th>
-		                <th class="bg-tab-hdr">Actions</th>
+		      			<th class="bg-tab-hdr">{{'arenella-accounts-tabavailability-id' | translate}}</th>
+		      			<th class="bg-tab-hdr">{{'arenella-accounts-tabavailability-name' | translate}}</th>
+		      			<th class="bg-tab-hdr">{{'arenella-accounts-tabavailability-pos' | translate}}</th>
+		      			<th class="bg-tab-hdr">{{'arenella-accounts-tabavailability-role' | translate}}</th>
+		                <th class="bg-tab-hdr">{{'arenella-accounts-tabavailability-actions' | translate}}</th>
 		             </tr>
 		      	</thead>
 		      	<tbody>
@@ -155,8 +155,8 @@
 		      				{{candidate.roleSought}}
 		      			</td>
 		      			<td class="medicol">
-		      				<button	class="btn btn-secondary arenella-btn" style="min-width:90px;" (click)="updateCandidateAvailability(candidate.candidateId, 'enable')">Available</button>
-		      				<button	class="btn btn-secondary arenella-btn" style="min-width:90px;" (click)="updateCandidateAvailability(candidate.candidateId, 'disable')">Disable</button>
+		      				<button	class="btn btn-secondary arenella-btn" style="min-width:90px;" (click)="updateCandidateAvailability(candidate.candidateId, 'enable')">{{'arenella-accounts-tabavailability-btn-available' | translate}}</button>
+		      				<button	class="btn btn-secondary arenella-btn" style="min-width:90px;" (click)="updateCandidateAvailability(candidate.candidateId, 'disable')">{{'arenella-accounts-tabavailability-btn-disable' | translate}}</button>
 		      			</td>
 		      		</tr>
 		      	</tbody>
@@ -169,20 +169,20 @@
 				<h3>Candidates</h3>
 				
 				<div style="float:left">
-					<label 	class="control-spacing candidate-lbl">Name</label>
+					<label 	class="control-spacing candidate-lbl">{{'arenella-accounts-tabacandidates-name' | translate}}</label>
 					<input 	class="control-spacing candidate-input" type="text" formControlName="firstname"/>
 				</div>
 				<div style="float:left">
-					<label 	class="control-spacing candidate-lbl">Surname</label>
+					<label 	class="control-spacing candidate-lbl">{{'arenella-accounts-tabacandidates-surname' | translate}}</label>
 					<input 	class="control-spacing candidate-input" type="text" formControlName="surname"/>
 				</div>
 				<div style="float:left">
-					<label 	class="control-spacing candidate-lbl">email</label>
+					<label 	class="control-spacing candidate-lbl">{{'arenella-accounts-tabacandidates-email' | translate}}</label>
 					<input 	class="control-spacing candidate-input" type="text" formControlName="email"/>
 					
 				</div>
 				<div class="action-buttons">
-					<button	class="control-spacing btn btn-secondary arenella-btn" style="margin-top:10px;" (click)="fetchCandidates()">Filter</button>
+					<button	class="control-spacing btn btn-secondary arenella-btn" style="margin-top:10px;" (click)="fetchCandidates()">{{'arenella-accounts-tabacandidates-btn-filter' | translate}}</button>
 				</div>
 			</form>
 		
@@ -193,9 +193,9 @@
 					<thead>
 		      			<tr>
 		      				<!-- Table Headers -->
-		      				<th class="bg-tab-hdr">Id</th>
-		      				<th class="bg-tab-hdr">Name</th>
-		                	<th class="bg-tab-hdr">Actions</th>
+		      				<th class="bg-tab-hdr">{{'arenella-accounts-tabacandidates-id' | translate}}</th>
+		      				<th class="bg-tab-hdr">{{'arenella-accounts-tabacandidates-name' | translate}}</th>
+		                	<th class="bg-tab-hdr">{{'arenella-accounts-tabacandidates-actions' | translate}}</th>
 		              </tr>
 		      		</thead>
 		      		<tbody>
@@ -207,11 +207,11 @@
 		            	    <td class="candidate-tab-col medicol">
 		            	    	<div [ngSwitch]="candidate.available">
 		                			<div  *ngSwitchCase="true">
-		                				<button	class="btn btn-secondary arenella-btn" style="min-width:100px;" (click)="updateCandidateAvailability(candidate.candidateId, 'disable')">Disable</button>
+		                				<button	class="btn btn-secondary arenella-btn" style="min-width:100px;" (click)="updateCandidateAvailability(candidate.candidateId, 'disable')">{{'arenella-accounts-tabacandidates-btn-disable' | translate}}</button>
 		                			</div>
 		                			<div>
-		                				<button	class="btn btn-secondary arenella-btn" style="min-width:100px;" *ngIf="candidateToDelete == '' || candidateToDelete != candidate.candidateId" (click)="deleteCandidate(candidate.candidateId)">Delete</button>
-		                				<button	class="btn btn-secondary arenella-btn" style="min-width:100px;" *ngIf="candidateToDelete == candidate.candidateId" (click)="confirmDeleteCandidate()" style="background:red">Confirm</button>
+		                				<button	class="btn btn-secondary arenella-btn" style="min-width:100px;" *ngIf="candidateToDelete == '' || candidateToDelete != candidate.candidateId" (click)="deleteCandidate(candidate.candidateId)">{{'arenella-accounts-tabacandidates-btn-delete' | translate}}</button>
+		                				<button	class="btn btn-secondary arenella-btn" style="min-width:100px;" *ngIf="candidateToDelete == candidate.candidateId" (click)="confirmDeleteCandidate()" style="background:red">{{'arenella-accounts-tabacandidates-btn-confirm' | translate}}</button>
 		                			</div>
 		                		</div>
 		                	</td>
@@ -226,27 +226,27 @@
 		<div *ngIf="showSkillsValidationTab">
 		
 			<div class="action-buttons">
-				<button	class="btn btn-secondary arenella-btn" (click)="persistValidatedSkills()">Update</button>
+				<button	class="btn btn-secondary arenella-btn" (click)="persistValidatedSkills()">{{'arenella-accounts-tabskills-btn-udpate' | translate}}</button>
 			</div>
 			<table class="table candidate-table availability">
 				
 				<thead>
 	      			<tr>
-	      				<th class="bg-tab-hdr">Skill</th>
-	      				<th class="bg-tab-hdr">Actions</th>
+	      				<th class="bg-tab-hdr">{{'arenella-accounts-tabskills-skill' | translate}}</th>
+	      				<th class="bg-tab-hdr">{{'arenella-accounts-tabskills-actions' | translate}}</th>
 	      		     </tr>
 	      		</thead>
 	      		<tbody>
 	      			<tr style="padding-bottom:20px; border-bottom:2px black solid;border-top:2px black solid;">
-		      			<td><b>Pending:</b> {{skillsToValidate.length}}</td>
+		      			<td><b>{{'arenella-accounts-tabskills-btn-pending' | translate}}:</b> {{skillsToValidate.length}}</td>
 		      		</tr>
 		      		<tr *ngFor="let skill of skillsToValidate">
 		      			<td *ngIf="skill.validationStatus == 'PENDING'">{{skill.skill}}</td>
 		      			<td *ngIf="skill.validationStatus == 'ACCEPTED'" class="skillAccepted">{{skill.skill}}</td>
 		      			<td *ngIf="skill.validationStatus == 'REJECTED'" class="skillRejected">{{skill.skill}}</td>
 		      			<td>
-		      				<button	class="btn btn-secondary arenella-btn" style="min-width:100px;" (click)="updateSkillValidationStatus(skill.skill, 'ACCEPTED')">Accept</button>
-		      				<button	class="btn btn-secondary arenella-btn" style="min-width:100px;" (click)="updateSkillValidationStatus(skill.skill, 'REJECTED')">Reject</button>
+		      				<button	class="btn btn-secondary arenella-btn" style="min-width:100px;" (click)="updateSkillValidationStatus(skill.skill, 'ACCEPTED')">{{'arenella-accounts-tabskills-btn-accept' | translate}}</button>
+		      				<button	class="btn btn-secondary arenella-btn" style="min-width:100px;" (click)="updateSkillValidationStatus(skill.skill, 'REJECTED')">{{'arenella-accounts-tabskills-btn-reject' | translate}}</button>
 		      			</td>
 		      		</tr>
 		      	</tbody>
@@ -256,19 +256,19 @@
 		<!-- Subscriptions requiring actions -->
 		<div *ngIf="showSubscriptionActionsTab">
 			<div class="sub-title">
-				<h3>Subscription actions required</h3>
+				<h3>{{'arenella-accounts-tabsubscriptions-title' | translate}}</h3>
 			</div>
 			
 			<table class="table candidate-table">
 				<thead>
 					<tr>
-						<th class="medicol">Id</th>
-						<th class="medicol">Name</th>
-						<th class="medicol">Email</th>
-						<th class="medicol">Lang</th>
-						<th class="medicol">Type</th>
-						<th class="medicol">Status</th>
-						<th class="medicol">Actions</th>
+						<th class="medicol">{{'arenella-accounts-tabsubscriptions-id' | translate}}</th>
+						<th class="medicol">{{'arenella-accounts-tabsubscriptions-name' | translate}}</th>
+						<th class="medicol">{{'arenella-accounts-tabsubscriptions-email' | translate}}</th>
+						<th class="medicol">{{'arenella-accounts-tabsubscriptions-lang' | translate}}</th>
+						<th class="medicol">{{'arenella-accounts-tabsubscriptions-type' | translate}}</th>
+						<th class="medicol">{{'arenella-accounts-tabsubscriptions-status' | translate}}</th>
+						<th class="medicol">{{'arenella-accounts-tabsubscriptions-actions' | translate}}</th>
 					</tr>
 				</thead>
 				<tbody>
