--- a/recruit-gui/src/app/login-user/login-user.component.html
+++ b/recruit-gui/src/app/login-user/login-user.component.html
@@ -11,26 +11,26 @@
 					<div class="wholepagerow">
 					
 						<div class="new-subscription" *ngIf="showSubscriptionMsg">
-							<h2>Thank you for subscribing.</h2>
-							<h3>Please log back in to continue</h3>
+							<h2>{{"arenella-login-user-subscription-thankyour" | translate}}</h2>
+							<h3>{{"arenella-login-user-subscription-login-to-continue" | translate}}</h3>
 						</div>
 					
 						<table>
 							<tr>
-								<td><span style="padding-right:20px;">Username</span></td>
+								<td><span style="padding-right:20px;">{{"arenella-login-user-username" | translate}}</span></td>
 								<td><input class="inpt-tab-std" type="text" formControlName="username"/></td>
 							</tr>
 							<tr>
-								<td>Password</td>
+								<td>{{"arenella-login-user-password" | translate}}</td>
 								<td><input class="inpt-tab-std" type="password" formControlName="password"/></td>
 							</tr>
 							<tr>
 								<td>&nbsp;</td>
-								<td><button class="btn btn-secondary arenella-btn loginbutton" (click)="login()">Login</button></td>
+								<td><button class="btn btn-secondary arenella-btn loginbutton" (click)="login()">{{"arenella-login-user-login" | translate}}</button></td>
 							</tr>
 							<tr>
 								<td></td>
-								<td class="forgotten-password-link" (click)="toggleForgottenPassword(true)">Forgotten Password?</td>
+								<td class="forgotten-password-link" (click)="toggleForgottenPassword(true)">{{"arenella-login-user-forgotten-password" | translate}}</td>
 							</tr>
 						</table>
 					</div>
@@ -42,18 +42,18 @@
 						<table>
 							<tr>
 								<td colspan="2">
-									<p>Please enter your email and click on 'Reset Password' and a new username and passsword will be emailed to you shortly</p>
+									<p>{{"arenella-login-user-forgotten-password-text" | translate}}</p>
 								</td>
 							</tr>
 							<tr>
-								<td>Email:</td>
+								<td>{{"arenella-login-user-email" | translate}}</td>
 								<td><input class="inpt-tab-std" type="text" formControlName="email"/></td>
 							</tr>
 							
 							<tr>
 								<td colspan="2">
-									<button class="btn btn-secondary arenella-btn forgotten-password-button" (click)="resetPassword()">Reset</button>
-									<button class="btn btn-secondary arenella-btn forgotten-password-button" (click)="cancelResetPassword()">Cancel</button>
+									<button class="btn btn-secondary arenella-btn forgotten-password-button" (click)="resetPassword()">{{"arenella-login-user-reset" | translate}}</button>
+									<button class="btn btn-secondary arenella-btn forgotten-password-button" (click)="cancelResetPassword()">{{"arenella-login-user-cancel" | translate}}</button>
 								</td>
 							</tr>
 							
@@ -84,7 +84,7 @@
  	</div>
 	<div class="feedbackBox">
 		<div class="modal-body">
-			Email Sent
+			{{"arenella-login-user-email-sent" | translate}}
 		</div>       
 	</div>
 </dialog>
